--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3457,7 +3457,6 @@ input, select, textarea {
 			font-family: Raleway, Helvetica, sans-serif;
 			font-size: 1em;
 			font-weight: 200;
-			letter-spacing: 0.1em;
 			line-height: 2;
 			text-transform: uppercase;
 		}
@@ -3550,7 +3549,7 @@ input, select, textarea {
 /* Wrapper */
 
 	#wrapper > header {
-		/*padding: 11em 0 2em 0 ;*/
+		padding: 11em 0 2em 0 ;
 	}
 
 		#wrapper > header .inner {
