--- a/css/main.css
+++ b/css/main.css
@@ -3419,6 +3419,27 @@ input, select, textarea {
 
 	}
 
+	/* modal */
+	.modal {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.5);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		z-index: -1;
+	  }
+	  
+	  .modal-content {
+		background-color: #4c5c96;
+		padding: 50px;
+		border-radius: 5px;
+		text-align: center;
+	  }
+
 /* Banner */
 
 	#banner {
@@ -4051,7 +4072,7 @@ input, select, textarea {
 /* Footer */
 
 	#footer .inner {
-		padding: 0 0 3em 0 ;
+		padding: 5em 0 3em 0 ;
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
