--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -10,15 +10,13 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  min-height: 300px;
 }
 
 /* Place text in the middle of the image */
 .hero-text {
   text-align: center;
   position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   color: white;
   margin-top: 40px;
 }
