--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -108,7 +108,7 @@
     display: none;
 }
 
-@media screen and (max-width: 1100px){
+@media screen and (max-width: 1000px){
 
     #header {
 		line-height: 2.75em;
@@ -140,4 +140,34 @@
     .mobileMenu {
         display: block;
     }
+}
+
+
+/* LOGO */
+
+.logoName {
+	vertical-align: top;
+	font-size: x-large;
+	font-weight: 800;
+	text-decoration: none;
+}
+
+.poppins-medium {
+	font-family: "Poppins", sans-serif;
+}
+
+
+@media screen and (max-width: 736px) {
+	.logoName {
+		font-size: medium;
+		font-weight: 500;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	.logoName {
+		font-size: small;
+		font-weight: 300;
+	}
+
 }
