--- a/src/components/Features/features.css
+++ b/src/components/Features/features.css
@@ -12,7 +12,7 @@
 
 .features article {
 	padding: 1.75em 1.75em 0.1em 1.75em;
-	background-color: #353849;
+	border: dotted 1px white;
 	border-radius: 5px;
 	margin: 1.5em 3em 1.5em 0;
 	width: calc(50% - 1.5em);
