--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -106,6 +106,7 @@
 
 .mobileMenu {
     display: none;
+	z-index: 999;
 }
 
 @media screen and (max-width: 1000px){
@@ -156,18 +157,22 @@
 	font-family: "Poppins", sans-serif;
 }
 
+.logoContainer {
+	display: flex;
+	flex-wrap: wrap;
+	padding-left: 10px;
+	padding-top: 20px;
+}
 
-@media screen and (max-width: 736px) {
-	.logoName {
-		font-size: medium;
-		font-weight: 500;
-	}
+.logoHeader {
+	height: 2.75em;
+	vertical-align: middle;
 }
 
 @media screen and (max-width: 480px) {
 	.logoName {
-		font-size: small;
-		font-weight: 300;
+		font-size: medium;
+		font-weight: 500;
 	}
 
 }
