--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -169,6 +169,10 @@
 	vertical-align: middle;
 }
 
+.closebutton {
+	width: 100px;
+}
+
 @media screen and (max-width: 480px) {
 	.logoName {
 		font-size: medium;
