--- a/src/components/ServicesPreview/servicespreview.css
+++ b/src/components/ServicesPreview/servicespreview.css
@@ -6,7 +6,6 @@
 
 .services-card {
     /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     text-align: center;
     overflow: auto;
@@ -14,7 +13,7 @@
 
 /* On mouse-over, add a deeper shadow */
 .services-card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 2px 0 white;
 }
 
 /* Add some padding inside the card container */
