--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -4,7 +4,7 @@
 	-ms-transition: background-color 0.2s ease-in-out;
 	transition: background-color 0.2s ease-in-out;
 	background-color: rgba(71, 117, 166, 0.95);
-	max-height: 3.5em;
+	min-height: 3.25em;
 	left: 0;
 	line-height: 3.5em;
 	padding: 0 1.25em;
@@ -112,7 +112,6 @@
 @media screen and (max-width: 1000px){
 
     #header {
-		line-height: 2.75em;
 	}
 
 	#header nav {
@@ -173,10 +172,19 @@
 	width: 100px;
 }
 
+.logoHeaderImage {
+	max-height: 3.5rem;
+}
+
+.headerSpan {
+	height: 2.75em;
+	display: block;
+}
+
 @media screen and (max-width: 480px) {
 	.logoName {
 		font-size: medium;
-		font-weight: 500;
+		font-weight: 700;
 	}
 
 }
