Add shell register links + admin link

--- a/src/components/BlackBar/blackbar.css
+++ b/src/components/BlackBar/blackbar.css
@@ -9,7 +9,10 @@
 .blackBarRow {
     display: flex;
     gap: 45px;
-    padding: 5px;
     flex-direction: row;
     justify-content: center;
+
+    a {
+        border-bottom: none;
+    }
 }
