--- a/src/components/BlackBar/blackbar.css
+++ b/src/components/BlackBar/blackbar.css
@@ -16,3 +16,9 @@
         border-bottom: none;
     }
 }
+
+.facebookLogo {
+    font-weight: 800;
+    font-size: large;
+    vertical-align: top;
+}
