--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -178,3 +178,11 @@
 .copyright li a {
 	color: inherit;
 }
+
+.footerLinks {
+    display: flex;
+    justify-content: center;
+    ul {
+        list-style-type: none;
+    }
+}
