--- a/src/components/BlackBar/blackbar.css
+++ b/src/components/BlackBar/blackbar.css
@@ -8,9 +8,12 @@
 
 .blackBarRow {
     display: flex;
+    font-size: medium;
     gap: 45px;
     flex-direction: row;
     justify-content: center;
+    padding-right: 3px;
+    padding-left: 3px;
 
     a {
         border-bottom: none;
