--- a/src/components/Quiz/stepper.css
+++ b/src/components/Quiz/stepper.css
@@ -4,7 +4,7 @@
     gap: 10px;
 }
 
-.labelWithError{
+.labelWithError {
     margin-bottom: 15px;
 }
 
@@ -19,4 +19,10 @@
 
 .hidden {
     display: none;
+}
+
+.centerMargins {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
